# xmlhtml-xpath

./: CHANGELOG.md  README.md  xmlhtml-xpath.cabal
data/: test.html
src/: Test.hs
src/Text/XmlHtml/: Arrow.hs
src/Xml/: XPath.hs
src/Xml/XPath/: Arrow.hs  Evaluator.hs  Parser.hs  Printer.hs  Types.hs
tests/: XPath.hs  test-file.xml
tests/cases/select-parent-node/: expected-result.xml
