Name:             xmlhtml-xpath
Version:          0.2
Description:      XPath support for xmlhtml.
Synopsis:         XPath support for xmlhtml.
Category:         Data, Xml
License:          BSD3
License-file:     LICENSE
Author:           Sebastiaan Visser
Maintainer:       code@silkapp.com
Build-Type:       Simple
Cabal-Version:    >= 1.9.2

Library
  GHC-Options:      -Wall
  HS-Source-Dirs:   src

  Build-Depends:
      base            == 4.*
    , arrow-list      >= 0.6 && < 0.7
    , attoparsec      == 0.10.*
    , bytestring      == 0.9.*
    , attoparsec-expr == 0.1
    , containers      >= 0.3 && < 0.5
    , text            == 0.11.*
    , xmlhtml         == 0.1.*

  Exposed-modules:  Xml.XPath
                    Xml.XPath.Arrow
                    Xml.XPath.Evaluator
                    Xml.XPath.Parser
                    Xml.XPath.Printer
                    Xml.XPath.Types

Test-Suite xpath
  Type:             exitcode-stdio-1.0
  Main-Is:          XPath.hs
  Build-Depends:
      base            == 4.*
    , blaze-builder
    , bytestring
    , HUnit
    , test-framework
    , test-framework-hunit
    , text
    , xmlhtml
    , xmlhtml-xpath
  Hs-Source-Dirs:   tests
