Name:             xmlhtml-xpath
Version:          0.2.3.2
Description:      XPath support for xmlhtml.
Synopsis:         XPath support for xmlhtml.
Category:         Data, Xml
License:          BSD3
License-file:     LICENSE
Author:           Sebastiaan Visser
Maintainer:       code@silk.co
Build-Type:       Simple
Cabal-Version:    >= 1.6

Library
  GHC-Options:      -Wall
  HS-Source-Dirs:   src

  Build-Depends:
      base            == 4.*
    , arrow-list      >= 0.6 && < 0.7
    , attoparsec      >= 0.10 && < 0.12
    , bytestring      >= 0.9 && < 0.11
    , attoparsec-expr == 0.1
    , containers      >= 0.3 && < 0.6
    , safe            == 0.3.*
    , text            >= 0.11 && < 1.2
    , xmlhtml         == 0.2.*

  Exposed-modules:  Text.XmlHtml.Arrow
                    Xml.XPath
                    Xml.XPath.Evaluator
                    Xml.XPath.Parser
                    Xml.XPath.Types

