name:             xmlhtml-xpath
version:          0.2.3.6
description:      XPath support for xmlhtml.
synopsis:         XPath support for xmlhtml.
category:         Data, Xml
license:          BSD3
license-file:     LICENSE
author:           Sebastiaan Visser
maintainer:       code@silk.co
build-type:       Simple
cabal-version:    >= 1.6

extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

source-repository head
  type:              git
  location:          https://github.com/silkapp/xmlhtml-xpath.git

library
  ghc-options:      -Wall
  hs-source-dirs:   src
  exposed-modules:
    Text.XmlHtml.Arrow
    Xml.XPath
    Xml.XPath.Evaluator
    Xml.XPath.Parser
    Xml.XPath.Types
  build-depends:
      base == 4.*
    , arrow-list == 0.7
    , attoparsec >= 0.10 && < 0.13
    , attoparsec-expr == 0.1.*
    , bytestring >= 0.9 && < 0.11
    , containers >= 0.3 && < 0.6
    , safe == 0.3.*
    , text >= 0.11 && < 1.3
    , xmlhtml == 0.2.*
